--- a/style.css
+++ b/style.css
@@ -1,13 +1,84 @@
 body {
+  z-index: -1
   /*height: 100%;*/
   width: 100%;
   background: ghostwhite;
   /*display: inline-block;*/
+  
+}
+img {
+  margin: 5px;
+}
+.noFlex {
+  display: inline-block;
 }
 
-.searchForm {
-  /*display: inline;*/
-  margin: 25% 25%;
+.myButton {
+-moz-box-shadow: -3px 3px 0px 0px #9fb4f2;
+-webkit-box-shadow: -3px 3px 0px 0px #9fb4f2;
+box-shadow: -3px 3px 0px 0px #9fb4f2;
+background:-webkit-gradient(linear, left top, left bottom, color-stop(0.05, #273a5c), color-stop(1, #476e9e));
+background:-moz-linear-gradient(top, #273a5c 5%, #476e9e 100%);
+background:-webkit-linear-gradient(top, #273a5c 5%, #476e9e 100%);
+background:-o-linear-gradient(top, #273a5c 5%, #476e9e 100%);
+background:-ms-linear-gradient(top, #273a5c 5%, #476e9e 100%);
+background:linear-gradient(to bottom, #273a5c 5%, #476e9e 100%);
+filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#273a5c', endColorstr='#476e9e',GradientType=0);
+background-color:#273a5c;
+-moz-border-radius:16px;
+-webkit-border-radius:16px;
+border-radius:16px;
+border:1px solid #4e6096;
+display:inline-block;
+cursor:pointer;
+color:#ffffff;
+font-family:Arial;
+font-size:18px;
+padding:10px 48px;
+text-decoration:none;
+text-shadow:0px 0px 0px #283966;
+margin-bottom: 2%;
+
+}
+.myButton:hover {
+background:-webkit-gradient(linear, left top, left bottom, color-stop(0.05, #476e9e), color-stop(1, #273a5c));
+background:-moz-linear-gradient(top, #476e9e 5%, #273a5c 100%);
+background:-webkit-linear-gradient(top, #476e9e 5%, #273a5c 100%);
+background:-o-linear-gradient(top, #476e9e 5%, #273a5c 100%);
+background:-ms-linear-gradient(top, #476e9e 5%, #273a5c 100%);
+background:linear-gradient(to bottom, #476e9e 5%, #273a5c 100%);
+filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#476e9e', endColorstr='#273a5c',GradientType=0);
+background-color:#476e9e;
+}
+
+div {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+.formContainer {
+  align-items: center;
+}
+
+.repeatIMG {
+  margin: 2%;
+}
+.searchForm input{
+  background-color:#fff;
+  border-color:#191919;
+  border-style:solid;
+  border-width:2px;
+  font-size:1.2em;
+  line-height:1em;
+  height:40px;
+  margin-bottom: 2%;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+.detailContainer {
   text-align: center;
-  /*margin: auto;*/
+}
+.details {
+    width: 66%;
 }
